# COMS22201-cw2

./: cw2.cabal
src/: Cwk2.hs  Cwk2P1.hs  Cwk2P2.hs
test/: Spec.hs
