name:                cw2
version:             0.1.0.0
synopsis:            Coursework 2 for COMS22201 at the University of Bristol
description:
homepage:            http://github.com/rossng/COMS22201-cw2
license:             BSD3
license-file:        LICENSE
author:              Ross Gardiner
maintainer:          ross-public@gmx.com
copyright:           2016 Ross Gardiner
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Cwk2P1, Cwk2P2, Cwk2
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable cw2-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cw2
  default-language:    Haskell2010

test-suite cw2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cw2
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/cw2
